refactoring frontend, workflows
