# doc/swagger.yaml
@@ -133,6 +133,23 @@ paths:
                 $ref: '#/components/schemas/InstanceInfo'
         '404':
           $ref: '#/components/responses/NotFound'
+  /api/common/database-users:
+    get:
+      operationId: getDatabaseUsers
+      parameters:
+        - $ref: '#/components/parameters/ClusterName'
+        - $ref: '#/components/parameters/Instance'
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        '404':
+          $ref: '#/components/responses/NotFound'
   /api/database/size:
     get:
       operationId: getDatabaseSize
@@ -815,6 +832,15 @@ paths:
       parameters:
         - $ref: '#/components/parameters/ClusterName'
         - $ref: '#/components/parameters/Instance'
+        - in: query
+          name: exclude_users
+          schema:
+            type: array
+            items:
+              type: string
+          style: form
+          explode: false
+          description: Comma-separated list of usernames to exclude from the report
       responses:
         '200':
           description: Success
